# RegisterPrinter

./: .editorconfig  .gitignore  MANIFEST.in  README.md  abc.xlsx  hook-register_printer.py  license_generator.py  license_generator.spec  main.py  main.spec  main_gui.py  main_gui.spec  main_linux.spec  main_mac.spec  manage.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: python-app.yml  python-publish.yml
excels/: block.xlsx  block1.xlsx  register_printer.json  register_test.json  top.xlsx
excels/blocks/: block0.xlsx  block1.xlsx
register_printer/: __init__.py  __main__.py  block.py  field.py  get_version.py  parse_config.py  parse_config2.py  parse_excels.py  print_c_header.py  print_doc.py  print_rtl.py  print_uvm.py  register.py  register_printer.py  template_loader.py  top_sys.py
register_printer/constants/: __init__.py
register_printer/data_model/: __init__.py  array.py  array_template.py  block.py  block_instance.py  block_template.py  field.py  field_template.py  register.py  register_template.py  struct.py  top_sys.py  utility.py
register_printer/excels/: block.xlsx  register_test.json  top.xlsx
register_printer/generators/: __init__.py
register_printer/license/: __init__.py  license.py
register_printer_backend/: asgi.py  settings.py  urls.py  wsgi.py
register_printer_doc/: admin.py  apps.py  models.py  serializers.py  urls.py  views.py
register_printer_gui/: __main__.py  generate_thread.py  log_handler.py  main_window.py  mainwindow.ui  ui_mainwindow.py
scripts/: generate_key.py  run.bat  uic.bat
(+53 files in other folders)
