[metadata]
name = register_printer
version = file: register_printer/VERSION
url = https://github.com/zhangyiant/RegisterPrinter.git
author = Yi Zhang
author_email = zhangyiant@hotmail.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
description = A tool to generate register codes.
long_description = file: README.md
long_description_content_type = text/markdown

[options]
packages = find:
include_package_data = True
install_requires =
    Jinja2 >= 2.11
    openpyxl >= 3.0
    python-docx >= 0.8
    xlrd <= 1.2
python_requires = >=3.7
